# fairtally

./: .coveragerc  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  NOTICE  README.dev.rst  README.md  README.rst  project_setup.rst  setup.cfg  setup.py
.githooks/: pre-commit
.github/workflows/: build.yml  cffconvert.yml  linting.yml  pypi.yml
coverage/: README.md
docs/: Makefile  conf.py  index.rst  make.bat
docs/_static/: fairtally_example.html  theme_overrides.css
fairtally/: __init__.py  __version__.py  check.py  cli.py  get_badge_color.py  redirect_stdout_stderr.py  utils.py
fairtally/data/: index.html.template
tests/: test_cli.py  test_fairtally.py  test_lint.py
