[bumpversion]
current_version = 0.1.0

[bumpversion:file:CITATION.cff]
search = version: "{current_version}"
replace = version: "{new_version}"

[bumpversion:file:fairtally/__version__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[coverage:run]
branch = True
source = fairtally

[metadata]
description-file = README.rst

[tool:isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = fairtally
src_paths = fairtally,tests,livetests
line_length = 120

[tool:pytest]
testpaths = tests
addopts = --cov --cov-report xml --cov-report term --cov-report html
